//generate go code with protoc --go_out=plugins=micro:. joke.proto
syntax = "proto3";

package joke;

service Joke {
    rpc ChuckNorris(Request) returns (Response) {};
}

message Request {
    string firstName  = 1;
    string lastName  = 2;
    string limitTo  = 3; 
}

// Response example { "type": "success", "value": { "id": 181, "joke": "John Doe's OSI network model has only one layer - Physical.", "categories": [“nerdy”] } }
message Response {
    string type = 1;
    ChuckNorrisJoke value = 2; 
}

message ChuckNorrisJoke {
    uint32 id = 1;
    string joke = 2;
    repeated string categories =3; 
}